--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,11 +1,6 @@
 @import "../sharedStyles";
 
 .profile{
-  //&__box{
-  //  width: 90%;
-  //  max-width: 1000px;
-  //  margin: 0 auto;
-  //}
   &__columns{
     width: 100%;
     display: flex;
@@ -19,5 +14,11 @@
   }
   &__col3{
     width: 25%;
+  }
+  &__preloader-box{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
