--- a/src/components/Dialogs/Dialogs.scss
+++ b/src/components/Dialogs/Dialogs.scss
@@ -25,7 +25,9 @@
 }
 .messages{
   width: 100%;
-  height: 100%;
+  height: 350px;
+  padding: 5px 10px;
+  overflow-y: auto;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
