--- a/src/components/Dialogs/Message/Message.scss
+++ b/src/components/Dialogs/Message/Message.scss
@@ -1,6 +1,7 @@
 @import "../../sharedStyles";
 
 .message{
+  max-width: 45%;
   border-radius: 5px;
   padding: 7px 45px 8px 7px;
   display: inline-block;
@@ -16,6 +17,8 @@
     display: inline-block;
   }
   &__text{
+    overflow-wrap: anywhere;
+
     font-size: 15px;
   }
 
@@ -25,6 +28,16 @@
     right: 5px;
     font-size: 11px;
     font-weight: 300;
+  }
+
+  &__wrapper--my-message{
+    justify-content: flex-end;
+    div{
+      background-color: #616395;
+    }
+    p{
+      color: #f3f6ff;
+    }
   }
 }
 
