--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,14 +1,17 @@
 @import '../sharedStyles';
 @mixin itemStyles{
-  display: block;
-  box-sizing: border-box;
+  display: flex;
+  align-items: center;
+  gap: 15px;
   width: 100%;
-  padding: 3px;
-  text-align: center;
+  padding: 3px 3px 3px 17px;
+  text-align: left;
   font-weight: bold;
   text-decoration: none;
   color: aliceblue;
+  box-sizing: border-box;
 }
+
 .nav{
   background-color: #ffffff;
   height: 100%;
@@ -17,12 +20,12 @@
   left: 0;
   top: 60px;
   z-index: 50;
+  transition: 0.2s;
   &__list{
     padding: 0;
     margin-top: 15px;
     li{
       padding-top: 8px;
-      display: block;
       list-style: none;
     }
   }
@@ -32,30 +35,49 @@
       i{
         color: #ff5e3a;
       }
+      span{
+        transition-duration: 0.1s;
+        color: $titleTextColor;
+      }
     }
     i{
       font-size: 25px;
       color: #9a9fbf;
       transition-duration: 0.1s;
+      width: 30px;
     }
+  }
+  &__item-desciption{
+    display: none;
+    visibility: hidden;
+    opacity: 0;
+    font-weight: 700;
+    color: $mainTextColor;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+  a{
     &.active{
       i{
         color: $commonOrange;
       }
+      span{
+        color: $titleTextColor;
+      }
     }
   }
   &__burger{
-    @include itemStyles;
     cursor: pointer;
-    &:hover{
-      i{
-        color: #ff5e3a;
-      }
-    }
-    i{
-      font-size: 25px;
-      color: #9a9fbf;
-      transition-duration: 0.1s;
+  }
+}
+
+.nav{
+  &--opened{
+    width: 220px;
+      span{
+        display: block;
+        visibility: visible;
+        opacity: 1;
     }
   }
 }
