--- a/src/components/Profile/ProfileHeader/ProfileHeader.scss
+++ b/src/components/Profile/ProfileHeader/ProfileHeader.scss
@@ -5,27 +5,59 @@
   flex-direction: column;
   position: relative;
   margin-bottom: 30px;
+  @include mainPageComponentsStyles;
   &__background{
+    position: relative;
     img{
       height: 300px;
       width: 100%;
-      object-fit: cover;border-radius: 5px 5px 0 0;
+      object-fit: cover;
+      border-radius: 5px 5px 0 0;
     }
   }
+  //&__add-photo{
+  //  position: absolute;
+  //  bottom: 10px;
+  //  right: 10px;
+  //  //width: 35px;
+  //  //height: 35px;
+  //  //border-radius: 50%;
+  //  //background-color: whitesmoke;
+  //  cursor: pointer;
+  //
+  //  i{
+  //    color: whitesmoke;
+  //    font-size: 17px;
+  //    text-shadow: 1px 1px 1px $mainTextColor;
+  //    line-height: 34px;
+  //    &:hover{
+  //      text-shadow: 1px 1px 1px $titleTextColor;
+  //    }
+  //  }
+  //}
   &__menu{
+    position: relative;
     width: 100%;
     height: 100px;
-    background-color: $mainComponentsColor;
     border-radius: 0 0 5px 5px;
+  }
+  &__contacts{
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    display: flex;
+    gap: 5px;
   }
 }
 .profile-short{
   display: flex;
   flex-direction: column;
+  align-items: center;
   position: absolute;
+  width: 300px;
   bottom: 10px;
   right: 50%;
-  margin-right: -60px;
+  margin-right: -150px;
   img{
     box-sizing: border-box;
     width: 120px;
@@ -45,6 +77,7 @@
     font-size: 20px;
     font-weight: 700;
     color: $titleTextColor;
+
   }
   &__country{
     font-weight: 400;
