--- a/src/components/Profile/ProfilePosts/ProfilePosts.scss
+++ b/src/components/Profile/ProfilePosts/ProfilePosts.scss
@@ -16,22 +16,22 @@
     align-items: flex-end;
     gap: 10px;
     @include mainPageComponentsStyles;
-    textarea {
-      box-sizing: border-box;
-      width: 100%;
-      min-height: 110px;
-      max-height: 400px;
-      padding: 5px 5px 5px 9px;
-      border-radius: 5px;
-      resize: none;
-      box-shadow: none;
-      outline: 0;
-      border: 1px solid $mainTextColor;
-      transition-duration: 0.2s;
-      &:focus{
-        border: 1px solid $commonOrange;
-        min-height: 150px;
-      }
+  }
+  &__input-textarea{
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 110px;
+    max-height: 400px;
+    padding: 5px 5px 5px 9px;
+    border-radius: 5px;
+    resize: none;
+    box-shadow: none;
+    outline: 0;
+    border: 1px solid $mainTextColor;
+    transition-duration: 0.2s;
+    &:focus{
+      border: 1px solid $commonOrange;
+      min-height: 150px;
     }
   }
 }
