--- a/src/components/SharedComponents/Button.scss
+++ b/src/components/SharedComponents/Button.scss
@@ -1,5 +1,6 @@
 
 .commonButton{
+  position: relative;
   background-color: #ff5e3a;
   color: #ffffff;
   border: none;
@@ -9,5 +10,19 @@
   border-radius: 5px;
   &:hover{
     background-color: rgba(255, 94, 58, 0.8);
+  }
+  &--disabled{
+    pointer-events: none;
+    &:before{
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(255, 255, 255, 0.25);
+    }
   }
 }
