--- a/src/components/sharedStyles.scss
+++ b/src/components/sharedStyles.scss
@@ -6,6 +6,7 @@ $mainTextColor: rgb(155, 159, 182);
 $commonOrange: #ff5e3a;
 $smoothCommonOrange: #ffdacc;
 $dialogColor: #f3f6ff;
+$headerTextColor: #989cca;
 
 @mixin flexCenter{
   display: flex;
@@ -22,6 +23,34 @@ $dialogColor: #f3f6ff;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+@mixin inputReset{
+  border: none;
+  &:focus{
+    outline: 0;
+  }
+}
+@mixin buttonReset{
+  border: none;
+  background-color: unset;
+  &:hover{
+    background-color: unset;
+  }
+}
+@mixin linkReset(){
+  color: $mainTextColor;
+  text-decoration: none;
+}
+
+@mixin commonButtonStyles(){
+  background-color: #ff5e3a;
+  color: #ffffff;
+  cursor: pointer;
+  border-radius: 5px;
+  &:hover{
+    background-color: rgba(255, 94, 58, 0.8);
+  }
 }
 .main{
   grid-area: main;
