--- a/src/components/Settings/ProfileSettings/ProfileSettings.scss
+++ b/src/components/Settings/ProfileSettings/ProfileSettings.scss
@@ -37,4 +37,11 @@
     align-items: center;
     gap: 10px;
   }
+  &__form{
+    margin-top: 40px;
+    padding-bottom: 20px;
+    div{
+      margin-bottom: 10px;
+    }
+  }
 }
