--- a/src/components/sharedStyles.scss
+++ b/src/components/sharedStyles.scss
@@ -7,6 +7,7 @@ $commonOrange: #ff5e3a;
 $smoothCommonOrange: #ffdacc;
 $dialogColor: #f3f6ff;
 $headerTextColor: #989cca;
+$validationErrorColor: indianred;
 
 @mixin flexCenter{
   display: flex;
