--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -57,7 +57,7 @@
       width: 30px;
     }
   }
-  &__item-desciption{
+  &__item-description{
     display: none;
     visibility: hidden;
     opacity: 0;
