--- a/src/components/SharedComponents/InputText/InputText.scss
+++ b/src/components/SharedComponents/InputText/InputText.scss
@@ -13,15 +13,16 @@
   }
   &__input{
     @include inputReset;
-    color: $mainTextColor;
+    color: $mainTextColorPlus;
     font-size: 15px;
     padding: 5px 10px 5px 10px;
     margin-bottom: 5px;
-    border: 1px solid $smoothCommonOrange;
+    border: 1px solid $middleCommonOrange;
     border-radius: 5px;
     box-sizing: border-box;
     &:focus{
-      outline: 1px solid $commonOrange;
+      border: 1px solid $commonOrange;
+      outline: 2px solid $middleCommonOrange;
     }
   }
   &__error{
