--- a/src/components/sharedStyles.scss
+++ b/src/components/sharedStyles.scss
@@ -3,7 +3,9 @@ $headerColor: #3f4257;
 $bodyColor: #edf2f6;
 $titleTextColor: #515365;
 $mainTextColor: rgb(155, 159, 182);
+$mainTextColorPlus: rgb(99, 101, 116);
 $commonOrange: #ff5e3a;
+$middleCommonOrange: #fba282;
 $smoothCommonOrange: #ffdacc;
 $dialogColor: #f3f6ff;
 $headerTextColor: #989cca;
