--- a/src/components/Profile/ProfileIntro/IntroItem/IntroItem.scss
+++ b/src/components/Profile/ProfileIntro/IntroItem/IntroItem.scss
@@ -2,7 +2,7 @@
 .intro-box{
   h4{
     font-size: 13px;
-    font-weight: 500;
+    font-weight: 700;
     color: $titleTextColor;
     margin: 5px 0;
   }
@@ -11,7 +11,8 @@
     white-space: normal;
     overflow-wrap: break-word;
     font-size: 12px;
-    font-weight: 300;
+    color: $titleTextColor;
+    font-weight: 400;
     margin: 0 0 10px 0;
   }
 }
